--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
     <style>
-      
+
       /* Custom animation for fade-in-up */
       @keyframes fadeInUp {
           0% {
@@ -59,8 +59,8 @@
         </div>
         <div class="hidden md:block">
             <ul class="flex space-x-4 md:space-x-6 lg:space-x-10  mt-[5%]">
-                <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Home</a></li>
-                <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">About Us</a></li>
+                <li><a href="index.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Home</a></li>
+                <li><a href="about.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">About Us</a></li>
                 <li><a href="product.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Products</a></li>
                 <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Gallery</a></li>
                 <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-black transition duration-300 text-white px-[20%] py-[12%] will-change-auto hover:will-change-scroll bg-green-700 rounded">Contact</a></li>
@@ -79,9 +79,9 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="md:hidden bg-white shadow-lg rounded-lg py-2 hidden">
         <ul class="flex flex-col space-y-2 px-4 mt-[5%]">
-            <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Home</a></li>
-            <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">About Us</a></li>
-            <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Products</a></li>
+            <li><a href="index.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Home</a></li>
+            <li><a href="about.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">About Us</a></li>
+            <li><a href="product.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Products</a></li>
             <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Gallery</a></li>
             <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Contact</a></li>
         </ul>
@@ -115,12 +115,14 @@
          <h3 class="text-[20px] text-green-700 text-center pt-[30px]">
              ____  Ecocraft Assurance  ____
          </h3>
-         <h1 class=" text-[30px] text-center pt-[5px]">
-              Experience plywood like never before with Ecocraft
+        <!-- <h2 class="heading02 text-center alro-font aos-init aos-animate" data-aos="fade-in" data-aos-duration="500">Experience <span class="red-span">plywood</span> like never before with <span class="red-span">ecocraft</span></h2>"> -->
+
+         <h1 class=" text-[26px] md:text-[30px] text-center pt-[5px]">
+             Experience <span class="text-green-700">plywood</span> like never before with <span class="text-green-700">Ecocraft</span>
          </h1>
 
-         <div class="mt-[20px]">
-          <ul class="flex justify-center lg:justify-center flex-wrap md:flex-nowrap md:space-x-4  mt-[5%]">
+         <div class="mt-[10vh]">
+          <ul class="flex justify-center  lg:justify-center flex-wrap md:flex-nowrap md:space-x-4  mt-[5%]">
             <li class="w-[100%] mb-[50px] sm:w-[48%] md:w-[22%] px-[20px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative ">
               <img src="./image/assurance-icon1.png" alt=" " id="animatedIcon" class="w-[75px] h-[100px] absolute bg-green-700 px-[15px] py-[30px] rounded-full top-[-40px] left-[20px]">  
               <h4 class="text-center mt-7 text-white text-lg font-semibold">
@@ -202,7 +204,7 @@
                 customers, along with lifetime insurance.
             </p>
             <div class="mt-[4%] justify-center">
-                <a href="" class="bg-black text-white rounded-full px-[6%] py-[2%]">Read More</a>
+                <a href="" class="bg-green-700 text-white rounded-full px-[6%] py-[2%]">Read More</a>
             </div>
         </div>
     </section>
@@ -270,7 +272,7 @@
     <section class="  flex-col md:flex-row wrapper flex justify-between">
         
       <div class="bg-black pr-[5%] w-full md:w-[48%] mt-[5%] pl-[10%] slide-in rounded-md relative md:left-10 z-20" id="content">
-        <h2 class="  mt-[5%] font-semiboldx flex text-green-500 pt-[7%]"><div class="bg-white my-3 h-[1px] w-8 mr-2 "> </div> ECOCRAFT PLYWOOD PRODUCTS </h2>
+        <h2 class="  mt-[5%] font-semiboldx flex text-green-500 pt-[7%]"><div class="bg-green-700 my-3 h-[1px] w-8 mr-2 "> </div> ECOCRAFT PLYWOOD PRODUCTS </h2>
         <h1 class="text-white text-[21px] font-bold">Turn Your Interiors Into Purposeful Spaces with Austin Plywood
 
         </h1>
@@ -615,7 +617,7 @@
   </footer> -->
 
   <footer>
-    <section class="bg-[#BAB86C] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full  py-20 px-10">
+    <section class="bg-[#BAB86C] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full  py-20 px-10 ">
 
       <div class="w-full md:w-[95%]">
         <img src="./image/logo.png" alt="" class="w-[40%] md:w-[70%]">
