--- a/product.html
+++ b/product.html
@@ -16,9 +16,9 @@
             </div>
             <div class="hidden md:block">
                 <ul class="flex space-x-4 md:space-x-6 lg:space-x-10  mt-[5%]">
-                    <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Home</a></li>
-                    <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">About Us</a></li>
-                    <li><a href="/product.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Products</a></li>
+                    <li><a href="index.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Home</a></li>
+                    <li><a href="about.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">About Us</a></li>
+                    <li><a href="product.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Products</a></li>
                     <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Gallery</a></li>
                     <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-black transition duration-300 text-white px-[20%] py-[12%] will-change-auto hover:will-change-scroll bg-green-700 rounded">Contact</a></li>
                 </ul>
@@ -36,9 +36,9 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="md:hidden bg-white shadow-lg rounded-lg py-2 hidden">
             <ul class="flex flex-col space-y-2 px-4 mt-[5%]">
-                <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Home</a></li>
-                <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">About Us</a></li>
-                <li><a href="http://127.0.0.1:5500/ecocraft/product.html#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Products</a></li>
+                <li><a href="index.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Home</a></li>
+                <li><a href="about.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">About Us</a></li>
+                <li><a href="product.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Products</a></li>
                 <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Gallery</a></li>
                 <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Contact</a></li>
             </ul>
@@ -56,7 +56,7 @@
     
 
     <section class="">
-        <img src="./image/plywoodbg.PNG" alt="">
+        <img src="./image/plywoodbg.PNG" alt="" class=" mt-[10%] md:mt-[6%]">
 
     </section>
 
@@ -64,7 +64,7 @@
         <section class="wrapper">
             <h1 class="text-[28px] text-center pt-[4%]"> <span class="text-green-700">ECO CRAFT</span> UNIQUE PERSPECTIVE</h1>
             <p class=" text-[12px] md:text-[16px] text-center pt-[1%] ">
-                At Austin Plywood, our commitment extends beyond delivering top-tier quality – we pledge products that align with their value. Our dedication to ethically sourced timber from sustainable farmlands underscores our mission to preserve natural ecosystems. As the frontrunners of India's eco-friendly plywood, we take on the responsibility of eradicating social and environmental threats. With state-of-the-art automated technology, we assure timely deliveries within a cost-effective range, all while upholding ecological equilibrium.
+                At Ecocraft, our commitment extends beyond delivering top-tier quality – we pledge products that align with their value. Our dedication to ethically sourced timber from sustainable farmlands underscores our mission to preserve natural ecosystems. As the frontrunners of India's eco-friendly plywood, we take on the responsibility of eradicating social and environmental threats. With state-of-the-art automated technology, we assure timely deliveries within a cost-effective range, all while upholding ecological equilibrium.
                 
             </p>
         </section>
