--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Calistoga&family=Pacifico&family=Poetsen+One&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">  
     <style>
 
       /* Custom animation for fade-in-up */
@@ -112,55 +119,57 @@
     
     <section>
       <section class="wrapper">
-         <h3 class="text-[20px] text-green-700 text-center pt-[30px]">
+         <h3 class="text-[20px] font-semibold text-green-700 text-center pt-[30px]">
              ____  Ecocraft Assurance  ____
          </h3>
         <!-- <h2 class="heading02 text-center alro-font aos-init aos-animate" data-aos="fade-in" data-aos-duration="500">Experience <span class="red-span">plywood</span> like never before with <span class="red-span">ecocraft</span></h2>"> -->
 
-         <h1 class=" text-[26px] md:text-[30px] text-center pt-[5px]">
-             Experience <span class="text-green-700">plywood</span> like never before with <span class="text-green-700">Ecocraft</span>
-         </h1>
+        <div class="container mx-auto ">
+          <h1 class="text-[26px]  md:text-[30px] text-center pt-[5px] font-montserrat font-semibold leading-tight tracking-tight text-gray-900 text-shadow-sm">
+              Experience <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-green-700">plywood</span> like never before with <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-500 to-green-700">Ecocraft</span>
+          </h1>
+      </div>
 
          <div class="mt-[10vh]">
-          <ul class="flex justify-center  lg:justify-center flex-wrap md:flex-nowrap md:space-x-4  mt-[5%]">
-            <li class="w-[100%] mb-[50px] sm:w-[48%] md:w-[22%] px-[20px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative ">
+          <ul class="flex justify-between  lg:justify-center flex-wrap md:flex-nowrap md:space-x-4  mt-[5%]">
+            <li class="w-[48%]  mb-[50px] md:w-[22%] px-[20px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative ">
               <img src="./image/assurance-icon1.png" alt=" " id="animatedIcon" class="w-[75px] h-[100px] absolute bg-green-700 px-[15px] py-[30px] rounded-full top-[-40px] left-[20px]">  
-              <h4 class="text-center mt-7 text-white text-lg font-semibold">
+              <h4 class="text-[14px] text-center mt-7 text-white text-lg font-semibold">
                     Bespoke
                 </h4>
-                <p class="text-center text-lg mt-1 text-white ">
-                    Each Sheet is a Detailed <br> Masterpiece
+                <p class=" text-[12px] md:text-center md:text-[16px] mt-1 text-white ">
+                    Each Sheet is a Detailed  Masterpiece
                 </p>
             </li>
 
-            <li class="w-[100%] mb-[50px] sm:w-[48%] md:w-[22%] px-[30px] py-[40px]  md:mb-5 bg-black rounded-[30px]  fade-in-up relative">
+            <li class="w-[48%] mb-[50px] sm:w-[48%] md:w-[22%] px-[30px] py-[40px]  md:mb-5 bg-black rounded-[30px]  fade-in-up relative">
               <img src="./image/assurance-icon2.png" alt=" "id="animatedIcon" class="w-[70px] h-[100px] absolute bg-green-700 px-[20px] py-[30px] rounded-full top-[-40px] left-[20px]">  
                 
-              <h4 class="text-center mt-7 text-white text-lg font-semibold">
+              <h4 class="text-[14px] text-center mt-7 text-white text-lg font-semibold">
                     Authenticity
                 </h4>
-                <p class="text-center text-lg mt-1 text-white ">
-                    Plywood That Assures <br> Long-term Durability
+                <p class=" text-[12px] md:text-center md:text-[16px] mt-1 text-white ">
+                    Plywood That Assures  Long-term Durability
                 </p>
             </li>
 
-            <li class="w-[100%] mb-[50px] sm:w-[48%] md:w-[22%] px-[30px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative">
-              <img src="./image/assurance-icon3.png" alt=" "id="animatedIcon" class="w-[70px] h-[100px] absolute bg-green-700 px-[20px] py-[30px] rounded-full top-[-40px] left-[20px]">  
-              <h4 class="text-center mt-7 text-white text-lg font-semibold">
-                    Versatility
+            <li class="w-[48%]  mb-[50px] md:w-[22%] px-[20px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative ">
+              <img src="./image/assurance-icon3.png" alt=" " id="animatedIcon" class="w-[75px] h-[100px] absolute bg-green-700 px-[15px] py-[30px] rounded-full top-[-40px] left-[20px]">  
+              <h4 class="text-[14px] text-center mt-7 text-white text-lg font-semibold">
+                  Versatility
                 </h4>
-                <p class="text-center text-lg mt-1 text-white pb-[50px]">
-                    A world of choices at <br> your fingertips
+                <p class=" text-[12px] md:text-center md:text-[16px] mt-1 text-white ">
+                  A world of choices at your fingertips
                 </p>
             </li>
 
-            <li class="w-[100%] sm:w-[48%] md:w-[22%] px-[30px] py-[40px]  mb-5 bg-black rounded-[30px]  fade-in-up relative">
-              <img src="./image/assurance-icon4.png" alt=" "id="animatedIcon" class="w-[70px] h-[100px] absolute bg-green-700 px-[20px] py-[30px] rounded-full top-[-40px] left-[20px]">  
-              <h4 class="text-center mt-7 text-white text-lg font-semibold">
-                    Sustainability
+            <li class="w-[48%]  mb-[50px] md:w-[22%] px-[20px] py-[40px] md:mb-5 bg-black rounded-[30px]  fade-in-up relative ">
+              <img src="./image/assurance-icon4.png" alt=" " id="animatedIcon" class="w-[75px] h-[100px] absolute bg-green-700 px-[15px] py-[30px] rounded-full top-[-40px] left-[20px]">  
+              <h4 class="text-[14px] text-center mt-7 text-white text-lg font-semibold">
+                  Sustainability
                 </h4>
-                <p class="text-center text-lg mt-1 text-white ">
-                    Committed to <br> eco-friendly practices
+                <p class=" text-[12px] md:text-center md:text-[16px] mt-1 text-white ">
+                  Committed eco-friendly practices
                 </p>
             </li>
     </ul>
@@ -188,8 +197,8 @@
       </section>
   </section>
 
-  <section class="pt-[4%] wrapper">
-    <section class=" flex-col md:flex-row flex justify-between">
+  <section class="pt-[4%] bg-cover bg-no-repeat mt-[2%] ">
+    <section class=" flex-col md:flex-row flex justify-between wrapper">
         <div class=" w-[90%] md:w-[50%]">
             <img src="./image/craft.jpg" alt="" class=" w-full rounded md:w-[70%] slide-in" id="animatedImage">
         </div>
@@ -650,9 +659,9 @@
       <div class="pt-10 md:pt-0 mt-[15%]">
         <h3 class="mb-[2%]">Quick Links</h3>
         <ul>
-          <li><i class="fa-solid fa-location-dot mr-[2%]"></i> Door No: 56A, 54B, Vairamkode Road, Koloopalam, Codacal Post. Malappuram Dt. 676 108</li>
+          <li><i class="fa-solid fa-location-dot mr-[2%]"></i> Door No: 5686633, Kuravilangad-Kottayam. 676108</li>
           <li class="mr-[4%] mt-[2%]"> <i class="fa-solid fa-envelope mr-[2%]"></i>Email info@ecocraft.com</li>
-          <li class="mr-[4%] mt-[2%]"><i class="fa-solid fa-phone mr-[2%] "></i>Support 9747222202</li>
+          <li class="mr-[4%] mt-[2%]"><i class="fa-solid fa-phone mr-[2%] "></i>Support +91 9447440617</li>
         </ul>
         <h4 class="flex mt-[2%]">
           <li class="  instagram "><i class="fa-brands fa-instagram icon1 icon"></i></li>
