--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
           <div>
               <ul class="flex justify-center pt-[3%]">
                   <li class="pr-[10%]">
-                      <h4 class="stroked-text text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black ">4.50M</h4>
+                      <h4 class="stroked-text md:text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black ">4.50M</h4>
                       <h5 class="text-[12px] md:text-[18px] pt-[15px]">Sheets Per Annum</h5>
                   </li>
 
                   <li class="pr-[10%]">
-                    <h4 class="stroked-text text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black ">2500+</h4>
+                    <h4 class="stroked-text md:text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black ">2500+</h4>
                     <h5 class="text-[12px] md:text-[18px] pt-[15px]">Sales Outlets</h5>
                 </li>
 
                 <li>
-                  <h4 class="stroked-text text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black "> 5 Lakh+</h4>
+                  <h4 class="stroked-text md:text-white text-[20px] md:text-[50px] font-semibold border-b-2 border-black "> 5 Lakh+</h4>
                   <h5 class="text-[12px] md:text-[18px] pt-[15px]">Delighted Customers</h5>
                 </li>
               </ul>
@@ -626,7 +626,7 @@
   </footer> -->
 
   <footer>
-    <section class="bg-[#BAB86C] grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full  py-20 px-10 ">
+    <section id="greenbg" class=" text-white grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 w-full  py-20 px-10 ">
 
       <div class="w-full md:w-[95%]">
         <img src="./image/logo.png" alt="" class="w-[40%] md:w-[70%]">
