--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                     <li><a href="index.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Home</a></li>
                     <li><a href="about.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">About Us</a></li>
                     <li><a href="product.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Products</a></li>
-                    <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Gallery</a></li>
+                    <li><a href="gallery.html" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-green-700 transition duration-300">Gallery</a></li>
                     <li><a href="#" class="text-base text-[14px] md:text-lg lg:text-xl hover:border-b-2 border-green-700 mb-[10%]  hover:text-black transition duration-300 text-white px-[20%] py-[12%] will-change-auto hover:will-change-scroll bg-green-700 rounded">Contact</a></li>
                 </ul>
             </div>
@@ -109,7 +109,7 @@
                 <li><a href="index.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Home</a></li>
                 <li><a href="about.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">About Us</a></li>
                 <li><a href="product.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Products</a></li>
-                <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Gallery</a></li>
+                <li><a href="gallery.html" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Gallery</a></li>
                 <li><a href="#" class="text-base text-[14px] md:text-lg hover:border-b-2 border-green-700 mb-[10%] hover:text-green-700 transition duration-300">Contact</a></li>
             </ul>
         </div>
@@ -184,9 +184,9 @@
       
 
       <section class="flex justify-between text-white mt-[8%] flex-wrap">
-        <div class="w-full mb-[4%] md:w-[48%] pl-[10%] bg-black pb-[6%] rounded-ee-full slide-in-left opacity-0">
+        <div class="w-full sm: px-[6%] content-center  sm:w-full mb-[4%] md:w-[48%] md:pl-[10%] bg-black pb-[6%] md:rounded-ee-full slide-in-left opacity-0">
             <h2 class="mt-[6%] mb-[2%]">OUR VISION</h2>
-            <p class=" text-[16px] pl-[4%]text-justify md:w-[80%] ">
+            <p class="text-[12px] md:text-[16px] pl-[4%]text-justify md:w-[80%] ">
                 We shall always strive to exhibit exemplary focus, transparency, speed and passion to evolve as the preferred choice of each consumer, providing them with the ideal product that is tailored to the changing times and their evolving aspirations. We aim to contribute meaningfully towards sustainability in the industry, nation and society in general by adopting practices, processes and technology that is relevant and best in class.
             </p>
         </div>
