--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
 </head>
 <!-- fixed top-0 w-full -->
 <body>
+  <a href="#your-target-section" class="fixed right-0 top-1/2 transform -translate-y-1/2 bg-red-500 text-white py-2 px-4 rounded-l-lg shadow-lg hover:bg-red-600 transition-colors z-50">
+    Enquire Now
+</a>
+<a href="https://wa.me/yourwhatsappnumber" target="_blank" class="fixed right-0 top-[60%] transform -translate-y-1/2 bg-green-500 text-white py-2 px-4 rounded-l-lg shadow-lg hover:bg-green-600 transition-colors z-50 flex items-center space-x-2">
+  <img src="path-to-whatsapp-icon.png" alt="WhatsApp" class="w-6 h-6">
+  <span>WhatsApp</span>
+</a>
+
+<a href="mailto:your-email@example.com" class="fixed right-0 top-[70%] transform -translate-y-1/2 bg-blue-500 text-white py-2 px-4 rounded-l-lg shadow-lg hover:bg-blue-600 transition-colors z-50 flex items-center space-x-2">
+  <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12H8m0 0l-4 4m4-4l4-4m0 8v-4a4 4 0 00-8 0v4m8 0h4m0 0l-4-4m0 8l4-4m0 0v4a4 4 0 01-8 0v-4m0 0h4" />
+  </svg>
+  <span>Contact Us</span>
+</a>
+
+
+
   <section class="bg-white fixed top-0 left-0 right-0 z-50 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
     <section class="wrapper flex items-center justify-between h-[50px] mb-[3%] px-4 md:px-8">
       <div class="w-[50%] md:w-[40%] flex">
