--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,14 @@
 </head>
 <!-- fixed top-0 w-full -->
 <body>
+    <a href="#your-target-section" class="fixed right-0 top-1/2 mb-[5%] transform -translate-y-1/2 bg-red-500 text-white py-2 px-2 rounded-l-lg shadow-lg hover:bg-red-600 transition-colors z-50">
+        Enquire Now
+    </a>
+    
+    
+<a href="https://wa.me/9526744704" class="fixed right-0 top-1/2 transform -translate-y-1/2 bg-green-500 text-white py-2 px-4 rounded-l-lg shadow-lg hover:bg-red-600 transition-colors z-50">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
   <section class="bg-white fixed top-0 left-0 right-0 z-50 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
     <section class="wrapper flex items-center justify-between h-[50px] mb-[3%] px-4 md:px-8 ">
         <div class="w-[50%] md:w-[40%] flex">
