--- a/index.html
+++ b/index.html
@@ -473,8 +473,12 @@
         </div>
         
         <div class="group">
-          <img src="./image/expertise-img3 (1).webp" alt="" class="transform transition-transform duration-300 group-hover:scale-105">
-          <h4 class="font-semibold mt-[3%] text-[18px] text-center group-hover:text-green-700 transition-colors duration-300">Color <br>Bar</h4>
+          <a href="visualise.html">
+            <img src="./image/expertise-img3 (1).webp" alt="" class="transform transition-transform duration-300 group-hover:scale-105">
+            <h4 class="font-semibold mt-[3%] text-[18px] text-center group-hover:text-green-700 transition-colors duration-300">ColorBar</h4>
+
+          </a>
+          
         </div>
       </div>
     </section>
