--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
 <a href="https://wa.me/9526744704" class="fixed right-0 top-1/2 transform -translate-y-1/2 bg-green-500 text-white py-2 px-4 rounded-l-lg shadow-lg hover:bg-red-600 transition-colors z-50">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
-  <section class="bg-white fixed top-0 left-0 right-0 z-50 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
+  <section class="  bg-white fixed top-0 left-0 right-0 z-50 shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
     <section class="wrapper flex items-center justify-between h-[50px] mb-[3%] px-4 md:px-8 ">
         <div class="w-[50%] md:w-[40%] flex">
             <img src="./image/logo.png" alt="Ecocraft Logo" class="w-[70%] md:w-[40%]">
@@ -72,6 +72,40 @@
         });
     </script>
 </section>
+
+    
+     <!-- Arrow Button -->
+
+     <button id="scrollTopBtn" class="fixed bottom-4 right-4 p-3 rounded-full bg-gray-600 text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
+        <!-- SVG for Up Arrow -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M5 15l7-7 7 7" />
+        </svg>
+      </button>
+  
+      <script>
+  
+              // JavaScript to scroll to the top
+        const scrollTopBtn = document.getElementById('scrollTopBtn');
+  
+        // Show button when scrolling down
+        window.onscroll = function() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                scrollTopBtn.style.display = "block";
+            } else {
+                scrollTopBtn.style.display = "none";
+            }
+        };
+  
+        // Scroll to the top when the button is clicked
+        scrollTopBtn.addEventListener('click', function() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        });
+  
+      </script>
+  
+  
+  <!-- arrow button  -->
 
 <section class="mt-[10%]">
     <section class="wrapper">
