--- a/about.html
+++ b/about.html
@@ -415,7 +415,7 @@
           <!-- Plywoods Section -->
           <div class="about-card bg-white p-6 rounded-lg shadow-lg transform transition duration-500 hover:scale-105" data-aos="fade-up" data-aos-delay="200">
             <img src="./image/picker.png" alt="Plywoods" class="w-[20%] mb-4">
-            <h3 class="text-2xl font-semibold text-green-700 mb-3">Plywoods</h3>
+            <h3 class="text-2xl font-semibold text-green-700 mb-3">Products</h3>
             <p class="text-gray-700">
               Our diverse range of products includes Nostalgia, Woodline, Eco Craft, Woodcraft, Eco Friend, Magnum, Ultimate.
             </p>
