--- a/contact.html
+++ b/contact.html
@@ -196,8 +196,10 @@
     <!-- Contact Us Section -->
     <section class="py-12 mt-[8%]">
         <div class="text-center mb-12">
-            <h2 class="text-xl text-yellow-500">CONTACT US</h2>
-            <h1 class="text-3xl font-bold">Ecocraft Private Limited</h1>
+            <h2 class="text-xl text-greenz-500">CONTACT US</h2>
+            <h1 class="text-3xl md:text-4xl lg:text-5xl font-bold text-gray-900 mb-4 animate-fade-in">
+                <span class="bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-green-600">Ecocraft India </span> 
+            </h1>
         </div>
 
         <!-- Cards container -->
@@ -205,22 +207,25 @@
 
             <!-- Card 1 -->
             <div class="fade-in bg-white p-6 rounded-lg shadow-lg flex flex-col items-center">
-                <i class='bx bxs-phone text-[90px] text-yellow-500 mb-4'></i>
+                <i class='bx bxs-phone text-[90px] mb-4 bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-green-600'></i>
                 <h3 class="text-lg font-bold">Calling Support</h3>
                 <p class="text-gray-700 mt-2">9447440617</p>
             </div>
 
             <!-- Card 2 -->
             <div class="fade-in bg-white p-6 rounded-lg shadow-lg flex flex-col items-center">
-                <i class='bx bx-current-location text-[90px] text-yellow-500 mb-4'></i>
+                <i class='bx bx-current-location text-[90px] mb-4 bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-green-600'></i>
+
                 <h3 class="text-lg font-bold">Office Location</h3>
-                <p class="text-gray-700 mt-2 text-center">EcoCraft Pvt. Ltd. Door No: 5686633, Vairamkode Road,
-                    Koloopalam, Codacal Post. kuruvilagand,Kottayam Dt. 676 108</p>
+                <h4>MJ&COMPANY</h4>
+                <p class="text-gray-700 mt-2 text-center"> Jaigiri Christuraj Church, Ground 8/76 D,
+                    Mnagalathu Building, kuriam to Valayala Road ,  kuruvilagand P.O ,Kottayam Dt,  PIN NO 686633.</p>
             </div>
 
             <!-- Card 3 -->
             <div class="fade-in bg-white p-6 rounded-lg shadow-lg flex flex-col items-center">
-                <i class='bx bx-envelope text-[90px] text-yellow-500 mb-4'></i>
+                <i class='bx bx-envelope text-[90px] mb-4 bg-clip-text text-transparent bg-gradient-to-r from-green-400 to-green-600'></i>
+
                 <h3 class="text-lg font-bold">Email Information</h3>
                 <p class="text-gray-700 mt-2">info@ecocraft.com</p>
             </div>
